2009-10-01  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #11843 Add a reports module: endPage was applied twice

2009-10-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12071: t3lib_sqlparser is not able to parse alias of a joined table (thanks to Xavier Perseguers)
	* Raised DBAL version from 0.9.21 to 0.9.22

2009-10-01  Rupert Germann  <rupi@gmx.li>

	* Follow-up to bug #11357: fixed a parse error in index_re.php
	* Fixed bug #11979: TCEforms suggest doesn't find everything on large sites and is slow  (thanks to Steffen Gebert)

2009-09-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12089: Make messages in reports module collapsible

2009-09-30  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12035: BE style must match t3skin in reports module and flash messages (thanks to Tom Ruether)
	* Fixed bug #12036: BE style must match t3skin in Install Tool (thanks to Tom Ruether)
	* Added feature #7461: Transfer cookies via SSL only whenever possible

2009-09-30  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12080 (Follow-up to bug #11505): pageCacheToExternalFiles=1 breaks db-caching in 4.3
	* Fixed bug #12082: PHP fatal error with frameset page
	* Fixed bug #12085: Memcached Configuration status report is broken

2009-09-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12068: Scheduler: Improper skipping of running tasks in case multiple execution denied

2009-09-29  Rupert Germann  <rupi@gmx.li>

	* Added feature #9355: Add an error and exception handler (backported from FLOW3) (thanks to Ingo Renner)
	* Added improvement #11855: security related links in EM are not marked as links.
	* Fixed bug #12032: The message "The selected language is not available..." in EM tranlation handling wrong if no language can be chosen (Thanks to Georg Ringer)

2009-09-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11433: touch(): Utime failed in install tool (thanks to Steffen Gebert)