@@ -31,6 +31,8 @@ body#ext-reports-mod-index-php {
 	margin: 15px 0;
 	padding: 2px 0 0 20px;
 	cursor: pointer;
+	height: 20px;
+	clear: left;
 }
 #ext-reports-mod-index-php h2.collapsed {
 	background-image:url(../../../gfx/arrowright.png);
@@ -39,6 +41,10 @@ body#ext-reports-mod-index-php {
 #ext-reports-mod-index-php h2.expanded {
 	background-image:url(../../../gfx/arrowdown.png);
 	background-repeat:no-repeat;
+}
+#ext-reports-mod-index-php h2.section-header img {
+	margin-right:2px;
+	vertical-align:bottom;
 }
 
 #ext-reports-mod-index-php .message-body {
